@startuml

title __CONTAS's Class Diagram__\n

  namespace br.com.bancoms.model {
    namespace contas {
      abstract class br.com.bancoms.model.contas.Conta {
          # descricao : String
          # id : int
          # numero : int
          # saldo : double
          # tipo : int
          + Conta()
          + depositar()
          + depositar()
          + depositarConta()
          + getDescricao()
          + getId()
          + getNumero()
          + getSaldo()
          + getSaldoSemDiferencial()
          + getTipo()
          + sacar()
          + sacarConta()
          + setDescricao()
          + setId()
          + setNumero()
          + setSaldo()
          + setTipo()
          + transferir()
          {abstract} # aplicarTaxas()
          {abstract} # getTaxa()
      }
    }
  }
  

  namespace br.com.bancoms.model {
    namespace contas {
      class br.com.bancoms.model.contas.ContaCorrente {
          - taxaCorrente : double
          + ContaCorrente()
          + depositar()
          + sacar()
          + transferir()
          # aplicarTaxas()
          # getTaxa()
      }
    }
  }
  

  namespace br.com.bancoms.model {
    namespace contas {
      enum ContaFactory {
        CORRENTE
        INVESTIMENTO
        POUPANCA
      }
    }
  }
  

  namespace br.com.bancoms.model {
    namespace contas {
      class br.com.bancoms.model.contas.ContaInvestimento {
          - rendimentoInvestimento : double
          + ContaInvestimento()
          + depositar()
          + sacar()
          + transferir()
          # aplicarTaxas()
          # getTaxa()
      }
    }
  }
  

  namespace br.com.bancoms.model {
    namespace contas {
      class br.com.bancoms.model.contas.ContaPoupanca {
          - rendimentoPoupanca : double
          + ContaPoupanca()
          + depositar()
          # aplicarTaxas()
          # getTaxa()
      }
    }
  }
  

  namespace br.com.bancoms.model {
    namespace contas {
      enum EConta {
        CORRENTE
        INVESTIMENTO
        POUPANCA
        value
      }
    }
  }
  

  br.com.bancoms.model.contas.ContaCorrente -up-|> br.com.bancoms.model.contas.Conta
  br.com.bancoms.model.contas.ContaInvestimento -up-|> br.com.bancoms.model.contas.Conta
  br.com.bancoms.model.contas.ContaPoupanca -up-|> br.com.bancoms.model.contas.Conta


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
